--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,22 @@
 <h1>Listing projects</h1>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="brand" href="#">CrowdFunder</a>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li class="<%= 'active' if current_page? root_path %>">
+              <%= link_to 'Home', :root %>
+            </li>
+            <li class="<%= 'active' if current_page? projects_path %>">
+              <%= link_to 'Projects', :projects %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <ul>
     <li>Project 1</li>
     <li>Project 2</li>
