--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,23 @@
               <% end %>
                  <%= link_to 'Projects', projects_path %>
                 </li>
-
             </ul>
+
+            <div class="member-links">
+              <% if !current_user %>
+              <%= link_to 'Sign Up', new_user_path %>
+              <% end %> | <%= link_to 'Log In', new_session_path %> | <%= link_to "Logout", session_path('current'), method: :delete %>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
     <div class="yield"> 
       <%= yield %>
+      <% if flash[:notice] %>
+        <p id="notice"><%= flash[:notice] %></p>
+      <% end %>
     </div>
   </body>
 </html>
