--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
             <div class="member-links">
               <% if !current_user %>
               <%= link_to 'Sign Up', new_user_path %>
-              <% end %> | <%= link_to 'Log In', new_session_path %> | <%= link_to "Logout", session_path('current'), method: :delete %>
+              <% end %> | <%= link_to 'Log In', new_session_path %> 
+              <% if current_user %> | <%= link_to "Logout", session_path('current'), method: :delete %>
+              <% end %>
             </div>
 
           </div>
