Making tests for my projects pass

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -10,3 +10,16 @@
   margin-top: 10px;
 }
 
+.project {
+  background-color: lightgray;
+  border-radius: 3px;
+  height: 40px;
+  width: 80%;
+  margin: 20px;
+
+}
+
+.p_text {
+  position: absolute;
+  margin: 10px;
+}
