--- a/app/views/my/projects/index.html.erb
+++ b/app/views/my/projects/index.html.erb
@@ -4,3 +4,6 @@
   <p class="p_text"><%= link_to project.title, my_project_path(project) %></p>
 </div>
 <% end %>
+<%= link_to new_my_project_path do %>
+  <button>New Project</button>
+<% end %>
