Making tests for pagination pas

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -20,6 +20,12 @@
 }
 
 .p_text {
-  position: absolute;
+  position: 0, absolute;
   margin: 10px;
+  padding-top: 10px;
+}
+
+ul
+{
+    list-style-type: none;
 }
