--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -19,3 +19,4 @@
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
+<%= link_to 'Manage Images', my_project_images_path(@project) %>
