--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                 </li>
                 
             </ul>
-
+            <input name="query" autocomplete = "off" id="search" />
             <div class="member-links">
               <% if !current_user %>
               <%= link_to 'Sign Up', new_user_path %>
