--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -19,4 +19,4 @@
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
-<%= link_to 'Manage Images', my_project_images_path(@project) %>
+<%= link_to 'Manage Images', my_project_images_path(@project) %> | <%= link_to "Delete Project", my_project_path(@project), :confirm => "Are you sure you want to delete this review?", :method => :delete %>
